kube context tweaks|kall func for *all* k8s resources|bugfix for cleaner